tests/ui/diagnostic_namespace/on_unknown/on_module_no_body.stderr
error[E0432]: oh no, that is not in aux module `x`
  --> $DIR/on_module_no_body.rs:8:9
   |
LL | pub use x::Bar;
   |         ^^^---
   |            |
   |            no `Bar` in `x`
   |
   = note: unresolved import `x::Bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
