tests/ui/diagnostic_namespace/on_unknown/on_module_no_body.rs
#![crate_type = "lib"]
#![feature(diagnostic_on_unknown)]

#[diagnostic::on_unknown(message = "oh no, that is not in aux module `{This}`")]
#[path = "auxiliary/module.rs"]
pub mod x;

pub use x::Bar;
//~^ ERROR oh no, that is not in aux module `x`
